[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/main/credits/CreditsHeader.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/main/ui/menu/loading-orb-sheet.png" type="Texture" id=2]
[ext_resource path="res://src/main/credits/credits-scroll.gd" type="Script" id=3]
[ext_resource path="res://src/main/credits/CreditsWallOfText.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/credits/TextCreditsLine.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/main/credits/TurboFatCreditsLine.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/main/credits/credits-orb.gd" type="Script" id=7]
[ext_resource path="res://src/main/credits/TextCreditsIndentLine.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/main/credits/credits-pieces.gd" type="Script" id=9]
[ext_resource path="res://src/main/ui/wallpaper/Wallpaper.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/main/credits/GodotCreditsLine.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/main/credits/credits-director.gd" type="Script" id=12]
[ext_resource path="res://src/main/credits/CreditsPiece.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/main/world/environment/lava/CrowdWalkCutscene.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/main/credits/credits-movie.gd" type="Script" id=15]
[ext_resource path="res://assets/main/credits/credits-view-mask.png" type="Texture" id=16]
[ext_resource path="res://src/main/utils/dynamic-viewport-container.gd" type="Script" id=17]
[ext_resource path="res://src/main/world/environment/lava/CrowdSurfCutscene.tscn" type="PackedScene" id=18]

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.254902, 0.156863, 0.117647, 0.784314 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="Animation" id=1]
resource_name = "play"
length = 240.0
step = 1.0
tracks/0/type = "method"
tracks/0/path = NodePath("FixedContainer/ScrollingContainer/Header")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 85.85, 86.1, 86.34, 86.59, 86.83, 87.07 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "transform_next_letter"
}, {
"args": [  ],
"method": "transform_next_letter"
}, {
"args": [  ],
"method": "transform_next_letter"
}, {
"args": [  ],
"method": "transform_next_letter"
}, {
"args": [  ],
"method": "transform_next_letter"
}, {
"args": [  ],
"method": "transform_all_letters"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("FixedContainer/OrbHolder/Orb")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 10.1009, 31, 63, 93.38 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ Vector2( -600, 80 ) ],
"method": "show_onscreen"
}, {
"args": [ Vector2( 1600, 600 ) ],
"method": "hide_offscreen"
}, {
"args": [ Vector2( 1600, 80 ) ],
"method": "show_onscreen"
}, {
"args": [ Vector2( 1600, 600 ) ],
"method": "hide_offscreen"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Movie")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 31.22, 93.71 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 29.261 ],
"method": "play_crowd_walk_cutscene"
}, {
"args": [  ],
"method": "play_crowd_surf_cutscene"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 31.0016, 32, 63, 64, 93, 94 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_movie_visible"
}, {
"args": [ 3 ],
"method": "set_credits_position"
}, {
"args": [ 5 ],
"method": "set_credits_position"
}, {
"args": [ false ],
"method": "set_movie_visible"
}, {
"args": [ true ],
"method": "set_movie_visible"
}, {
"args": [ 1 ],
"method": "set_credits_position"
} ]
}

[node name="CreditsScroll" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
CreditsWallOfTextScene = ExtResource( 4 )
GodotCreditsLineScene = ExtResource( 11 )
TextCreditsLineScene = ExtResource( 5 )
TextCreditsIndentLineScene = ExtResource( 8 )
TurboFatCreditsLineScene = ExtResource( 6 )

[node name="Wallpaper" parent="." instance=ExtResource( 10 )]

[node name="Movie" type="Node2D" parent="."]
script = ExtResource( 15 )
CrowdWalkCutsceneScene = ExtResource( 14 )
CrowdSurfCutsceneScene = ExtResource( 18 )

[node name="Clip" type="Light2D" parent="Movie"]
position = Vector2( 256, 300 )
texture = ExtResource( 16 )
texture_scale = 0.5
mode = 3
range_item_cull_mask = 2

[node name="ViewportContainer" type="ViewportContainer" parent="Movie"]
light_mask = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 52.5
margin_top = 52.5
margin_right = 459.5
margin_bottom = 547.5
stretch = true
stretch_shrink = 4
script = ExtResource( 17 )
restaurant_viewport_path = NodePath("Viewport")

[node name="Viewport" type="Viewport" parent="Movie/ViewportContainer"]
size = Vector2( 101, 123 )
handle_input_locally = false
hdr = false
usage = 0
render_target_update_mode = 3
__meta__ = {
"_editor_description_": ""
}

[node name="Panel" type="Panel" parent="Movie"]
margin_left = 50.0
margin_top = 50.0
margin_right = 462.0
margin_bottom = 550.0
custom_styles/panel = SubResource( 2 )

[node name="FixedContainer" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="FadeOutPoint" type="Node2D" parent="FixedContainer"]
position = Vector2( 0, 110 )

[node name="FadeInPoint" type="Node2D" parent="FixedContainer"]
position = Vector2( 0, 600 )

[node name="ScrollingContainer" type="Control" parent="FixedContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -300.0
margin_right = 256.0
margin_bottom = 300.0
__meta__ = {
"_editor_description_": ""
}

[node name="Lines" type="Control" parent="FixedContainer/ScrollingContainer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" parent="FixedContainer/ScrollingContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_right = 1.0
margin_left = 0.0

[node name="OrbHolder" type="Control" parent="FixedContainer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Orb" type="Sprite" parent="FixedContainer/OrbHolder"]
position = Vector2( 517.03, 303.396 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 3
vframes = 3
script = ExtResource( 7 )
wallpaper_path = NodePath("../../../Wallpaper")

[node name="Pieces" type="Node2D" parent="FixedContainer/OrbHolder"]
script = ExtResource( 9 )
header_path = NodePath("../../ScrollingContainer/Header")
orb_path = NodePath("../Orb")
piece_scene = ExtResource( 13 )

[node name="CreditsDirector" type="Node" parent="."]
script = ExtResource( 12 )

[node name="MusicSyncPlayer" type="AnimationPlayer" parent="CreditsDirector"]
root_node = NodePath("../..")
autoplay = "play"
anims/play = SubResource( 1 )

[node name="Timer" type="Timer" parent="CreditsDirector"]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="CreditsDirector/Timer" to="CreditsDirector" method="_on_Timer_timeout"]
